# carona-usp-servidor

./: .gitignore  Makefile  Makefile.am  README.md  TODO  conexao.c  conexao.h  conexao_helper.h  config.h  configure.ac  database.c  database.h  fila_clientes.c  fila_clientes.h  global.h  hash.c  hash.h  index.htm  index.html  init.c  init.h  instruções_compilação  json.c  json.h  json2.c  mail.c  mail.h  params.json  passwords.h  run-tests.sh  server  server.c  server.h  testes_json.c  tests.sh  tests1.sh  tests3.sh
backup2/: Makefile  conexao.c  conexao.h  config.h  hash.c  hash.h  init.c  init.h  instruções_compilação  mail.c  mail.h  passwords.h  server.c  server.h
backup2/tests/: package_sender.c
backup2/tests_old/: file-to-out.sh  run-tests.sh  tests2.sh
json_testes/: test.c
src/: ClientThread.cc  Database.cc  JSON.cc  Network.cc  main.cc
src/include/: ClientThread.hh  Database.hh  JSON.hh  Network.hh
src/programs/: json_server_demo.cc  ssl_server_demo.cc
tests/: database_test.c  envia_email.c  package_sender  package_sender.c  test1  test1.sh  test2  test3
tests_old/: tests3.sh
